--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,7 @@
 [build]
   command = "cd app && bun run build"
   functions = "netlify/functions"
-  publish = "./app"
+  publish = "./app/dist"
 
   ## Uncomment to use this redirect for Single Page Applications like create-react-app.
   ## Not needed for static site generators.
