--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 # example netlify.toml
 [build]
-  command = "cd app && tsc && vite build"
+  command = "cd app && npx tsc && npx vite build"
   functions = "netlify/functions"
   publish = "./app/dist"
 
